--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock time</title>
-    <link rel="stylesheet" href="clock.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <script src="clock.js"></script>
     <h1>We are Coming Soon..!</h1>
     <div class="countdowm">
         <div class="timer">
@@ -29,6 +28,7 @@
             <span class="label">sec</span>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
